카피라잇 추가

--- a/html/inc/footer.html
+++ b/html/inc/footer.html
@@ -14,7 +14,10 @@
             <span class="copy-item">개인정보보호책임 : 강명준</span>
             <span class="copy-item">사업자등록번호 : 108-81-81174</span>
         </p>
-        <p class="footer-copy">통신판매 신고번호  제 2013-서울동작-0620호</p>
+        <p class="footer-copy">
+            <span class="copy-item">통신판매 신고번호  제 2013-서울동작-0620호</span>
+            <span class="copy-item">Copyright 2021 © TERA STUDY. All Rights Reserved.</span>
+        </p>
         <p class="footer-copy">
             <span class="txt-center">고객센터 <strong class="txt-center-number">: 02-6333-0042</strong></span>
             <span class="copy-item">운영시간 09:00~18:00, 토/일 및 공휴일 휴무</span>
