로그아웃추가

--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -4,6 +4,7 @@
     </h1>
     <div class="util-menu">
         <a href="#" class="util-n1"><span class="blind">로그인</span></a>
+        <a href="#" class="util-n3"><span class="blind">로그아웃</span></a>
         <a href="#" class="util-n2"><span class="blind">회원가입</span></a>
     </div>
     <div class="goldkey">
