--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -174,6 +174,9 @@
 							</button>
 						</div>
 					</div>
+					<div class="courses-item banner-item">
+						<a href="" class="link-courses"><img src="../../resources/images/temp/@banner2.png" alt=""></a>
+					</div>
 				</div>
 
 				<div class="paging">
