리더 열쇠 이미지 추가

--- a/html/inc/goldkey.html
+++ b/html/inc/goldkey.html
@@ -75,7 +75,7 @@
                                 
                         </div>
                     </li>
-                    <li class="n3 on">
+                    <li class="n3 on leader-type"><!-- D : 리더에서만 [leader-type] class add -->
                         <button type="button" class="btn-dep-1"><span>리더</span></button>
                     </li>
                 </ul>
