--- a/html/sub/customer05.html
+++ b/html/sub/customer05.html
@@ -43,18 +43,18 @@
 						<p class="customer-time">평일 AM 09:00 ~ PM 05:00</p>
 					</div>
 					<div class="customer-summery-contents">
-						<div class="customer-item">
+						<a href="" class="customer-item">
 							<i class="icon-customer-a"></i>
 							<p>TERA STUDY 서비스 사용법</p>
-						</div>
-						<div class="customer-item">
+						</a>
+						<a href="" class="customer-item">
 							<i class="icon-customer-b"></i>
 							<p>비대면 강의실 사용법</p>
-						</div>
-						<div class="customer-item">
+						</a>
+						<a href="" class="customer-item">
 							<i class="icon-customer-c"></i>
 							<p>비대면 강의실 오류해결</p>
-						</div>
+						</a>
 					</div>
 				</div>
 
