버튼명 변경

--- a/html/sub/mypage04_2.html
+++ b/html/sub/mypage04_2.html
@@ -97,7 +97,7 @@
 					</div>
 				</section>
 				<div class="btn-area-a">
-					<button type="button" class="btn-type-h">취소</button>
+					<button type="button" class="btn-type-h">삭제</button>
 					<button type="button" class="btn-type-e">취소</button>
 					<button type="button" class="btn-type-f">다시쓰기</button>
 					<button type="button" class="btn-type-c">저장</button>
