서비스소개 팝업추가 ing

--- a/html/inc/serviceTop.html
+++ b/html/inc/serviceTop.html
@@ -9,7 +9,9 @@
     <select title="서비스 소개">
         <option value="../../html/sub/service01.html">서비스 소개</option>
         <option value="../../html/sub/service02.html">매니지먼트 시스템</option>
+        <option value="">무료 학습 컨설팅 신청</option>
     </select>
     <a href="../../html/sub/service01.html"><span>서비스 소개</span></a>
     <a href="../../html/sub/service02.html"><span>매니지먼트 시스템</span></a>
+    <a href="" class="free-counsel"><span>무료 학습 컨설팅 신청</span></a>
 </div>
