--- a/html/sub/service01.html
+++ b/html/sub/service01.html
@@ -125,7 +125,7 @@
 					<div class="service-info-area">
 						<p class="txt-service-a v2">바로 지금! 테라스터디로 도전하세요!</p>
 						<button type="button" class="btn-gold big">
-							<span>학습상담 신청</span>
+							<span>무료 학습 컨설팅 신청</span>
 						</button>
 						<ul class="service-list-d">
 							<li class="list-item">
