--- a/html/sub/service01.html
+++ b/html/sub/service01.html
@@ -124,7 +124,7 @@
 					</div>
 					<div class="service-info-area">
 						<p class="txt-service-a v2">바로 지금! 테라스터디로 도전하세요!</p>
-						<button type="button" class="btn-gold big">
+						<button type="button" class="btn-gold big" onclick="$plugins.common.consutingPop();" >
 							<span>무료 학습 컨설팅 신청</span>
 						</button>
 						<ul class="service-list-d">
@@ -199,6 +199,7 @@
         <footer class="base-footer"></footer>
 
 		<div class="base-goldkey"></div>
+		<div class="base-consulting"></div>
 	</div>
 
 	<script>
