--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -122,6 +122,22 @@
 								<li class="on">6</li>
 								<li class="on">7</li>
 								<li class="on">8</li>
+								<li class="on">9</li>
+								<li class="on">10</li>
+								<li class="on">11</li>
+								<li class="on">12</li>
+								<li class="on">13</li>
+								<li class="on">14</li>
+								<li class="on">15</li>
+								<li class="on">16</li>
+								<li class="on">17</li>
+								<li class="on">18</li>
+								<li>19</li>
+								<li>20</li>
+								<li>21</li>
+								<li>22</li>
+								<li>23</li>
+								<li>24</li>
 							</ol>
 							<button type="button" class="btn-gold big" disabled>
 								<span>비대면 수업완료</span>
