--- a/html/sub/leader.html
+++ b/html/sub/leader.html
@@ -85,9 +85,8 @@
 				</div>
 
 				<div class="btn-area">
-					<a href="#" class="btn-gold">
-						<span>유재진 리더와 화상 수업하기</span>
-					</a>
+					<a href="#" class="btn-gold"><span>유재진 리더와 화상 수업하기</span></a>
+                    <a href="#" class="btn-gold"><span>무료 학습 컨설팅 신청</span></a>
 				</div>
 				
 
