3016 요청사항 추가

--- a/html/sub/mypage01.html
+++ b/html/sub/mypage01.html
@@ -36,6 +36,10 @@
 				</div>
 				<div class="ajax-mypage-top" data-n="1"></div>
 
+				<div class="no-data">
+					등록된 데이터가 없습니다.
+				</div>
+
 				<div class="courses-wrap">
 					<div class="courses-item">
 						<div class="courses-item-a">
@@ -189,6 +193,9 @@
 								<span>강의 준비중</span>
 							</button>
 						</div>
+					</div>
+					<div class="courses-item banner-item">
+						<a href="" class="link-courses"><img src="../../resources/images/temp/@banner2.png" alt=""></a>
 					</div>
 					<div class="courses-item banner-item">
 						<a href="" class="link-courses"><img src="../../resources/images/temp/@banner2.png" alt=""></a>
