--- a/html/sub/mypage04.html
+++ b/html/sub/mypage04.html
@@ -62,6 +62,10 @@
 					</fieldset>
 				</section>
 
+				<div class="no-data">
+					등록된 데이터가 없습니다.
+				</div>
+
 				<section class="box-list-a">
 					<!-- S : box-item -->
 					<div class="box-item-a">
