3017 요청사항 수정

--- a/html/sub/payment.html
+++ b/html/sub/payment.html
@@ -84,7 +84,7 @@
 							</div>
 							<div class="agree-item" style="padding-left:0">
 								<div class="agree-title">
-									<button type="button" class="btn-folding" style="width: 100%;">유의사항 및 환부 규정을 모두 확인해주셨나요?</button>
+									<button type="button" class="btn-folding" style="width: 100%;">유의사항 및 환불 규정을 모두 확인해주셨나요?</button>
 								</div>
 								<div class="agree-content">
 									<div class="terms-d"></div>
