0413 추가 페이지 작업

--- a/html/inc/footer.html
+++ b/html/inc/footer.html
@@ -26,6 +26,17 @@
     </div>
     <div class="side-nav">
         <button type="button" class="btn-top"><span class="for-a11y">TOP</span></button>
+        <button type="button" class="btn-quick"><span class="txt-quick">내신</span></button>
+        <button type="button" class="btn-quick"><span class="txt-quick">회화</span></button>
+        <button type="button" class="btn-kakao"><span class="for-a11y">kakao</span></button>
+    </div>
+</div>
+<div class="footer-area intro">
+    <p class="copy-txt-a">Copyright Since 2021ⓒ테라스터디. All rights reserved.</p>
+    <div class="side-nav">
+        <button type="button" class="btn-top"><span class="for-a11y">TOP</span></button>
+        <button type="button" class="btn-quick"><span class="txt-quick">내신</span></button>
+        <button type="button" class="btn-quick"><span class="txt-quick">회화</span></button>
         <button type="button" class="btn-kakao"><span class="for-a11y">kakao</span></button>
     </div>
 </div>
