--- a/html/inc/header.html
+++ b/html/inc/header.html
@@ -1,6 +1,8 @@
 <div class="header-area">
     <h1 class="logo-tera">
         <a href="/"><img src="../../resources/images/common/logo.png" alt="TERA STUDY"></a>
+        <a href="" class="link-type">내신/시험</a>
+        <a href="" class="link-type">회화</a>
     </h1>
     <div class="util-menu">
         <a href="#" class="util-n1"><span class="blind">로그인</span></a>
