--- a/html/sub/category.html
+++ b/html/sub/category.html
@@ -109,7 +109,7 @@
 					<ul>
 						<li>
 							<div class="teacher-item">
-								<em class="ico-matching"><span class="blind">매칭</span></em>
+								<em class="ico-flag"><span class="txt-flag">1:1</span></em>
 								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
 								<dl class="info">
 									<dt>김연수</dt>
@@ -122,7 +122,7 @@
 						</li>
 						<li>
 							<div class="teacher-item">
-								<!-- <em class="ico-matching"><span class="blind">매칭</span></em> -->
+								<em class="ico-flag type-b"><span class="txt-flag">1:3</span></em>
 								<img class="photo" src="../../resources/images/teacher/sample01.png" alt="">
 								<dl class="info">
 									<dt>김연수</dt>
